# finance-expert-team

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  IMPROVEMENTS.md  LICENSE  README.md  main.py  pyproject.toml  research.md
agents/: backtest_agent.py  batch_report.py  data_agent.py  fundamental_agent.py  meta_optimizer.py  orchestrator.py  portfolio_agent.py  report_agent.py  risk_agent.py  scorecard_agent.py  sentiment_agent.py  technical_agent.py  visual_report.py
core/: base_agent.py  config.py  data_normalizer.py  intent_router.py  message_bus.py  param_loader.py  parameter_optimizer.py  rate_limiter.py  research_parser.py
memory/: __init__.py  memory_manager.py  portfolio_store.py  schemas.py
optimization/: agent_params.json  experiment_log.tsv  test_set.json
regulation/: __init__.py  compliance_report.py  power_of_ten.py  runtime_guards.py
roadmap/: autoresearch-inspired-features.md  性能提升.md
strategies/: backtest_engine.py
tests/: test_team_performance.py
