[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "finance-expert-team"
version = "0.1.0"
description = "AI-powered multi-agent stock analysis system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "yfinance>=0.2.38",
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "ta>=0.11.0",
    "pandas-datareader>=0.10.0",
    "matplotlib>=3.8.0",
    "plotly>=5.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]
